misc: uniform GitHub action (#5069)
* Update azure-devops-issue-sync.yml

* Update chart-sync.yaml

* Update create-release.yml

* Update enterprise-repo-sync.yaml

* Update pager-duty-issue-escalate.yaml

* Update update-release-notes.yml

* Update chart-sync.yaml

* Update create-release.yml

* Update enterprise-repo-sync.yaml

* Update update-release-notes.yml

* Update enterprise-repo-sync.yaml

---------

Co-authored-by: Prakarsh <71125043+prakarsh-dt@users.noreply.github.com>

--- a/.github/workflows/chart-sync.yaml
+++ b/.github/workflows/chart-sync.yaml
@@ -27,9 +27,9 @@ jobs:
         script-file: ${{ secrets.CHART_SYNC_SCRIPT_FILE }}
         git-target-repo: ${{ secrets.GIT_TARGET_REPO }}
         git-source-repo: ${{ secrets.GIT_SOURCE_REPO }}
-        git-target-useremail: ${{ secrets.GIT_TARGET_EMAIL }}
-        git-target-username: ${{ secrets.GIT_TARGET_USERNAME }}
-        git-target-token: ${{ secrets.GIT_TARGET_TOKEN }}
+        git-target-useremail: ${{ secrets.GH_SYSTEMSDT_EMAIL }}
+        git-target-username: ${{ vars.GH_SYSTEMSDT_USERNAME }}
+        git-target-token: ${{ secrets.GH_SYSTEMSDT_TOKEN }}
         git-target-dir: ${{ secrets.GIT_TARGET_DIR }}
         git-source-dir: ${{ secrets.GIT_SOURCE_DIR }}
         working-dir: ${{ secrets.WORKING_DIR }}
